# apache-log-cli

./: Makefile  README.md  pyproject.toml
config/: config.toml
docker/: Dockerfile  docker-compose.yml
docker/apache/: httpd.conf
docker/postgres/: create_tables.sql
src/: __main__.py
src/cli/: app.py
src/cli/subcmds/: client.py  scheduler.py
src/client/dto/: log.py
src/client/services/: by_date.py  by_ip.py
src/core/: config.py
src/db/: connection.py
src/scheduler/: broker.py  run.py  task.py
src/scheduler/dto/: create_log.py
src/scheduler/services/: create_log.py  log_file.py
