[tool.poetry]
name = "apache-log-reader"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
taskiq = "^0.11.6"
databases = {extras = ["asyncpg"], version = "^0.9.0"}
typer = {extras = ["rich"], version = "^0.12.3"}
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
